--- a/index.html
+++ b/index.html
@@ -4,6 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hi/Max Real Estate & Houses</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+
+        h1, h2, h3 {
+            color: #333;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin-right: 15px;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+            background: white;
+        }
+
+        table, th, td {
+            border: 1px solid #ddd;
+            padding: 10px;
+            text-align: left;
+        }
+
+        footer {
+            margin-top: 30px;
+            padding: 10px;
+            text-align: center;
+            background: #333;
+            color: white;
+        }
+
+        footer nav {
+            margin-top: 10px;
+        }
+
+        footer svg {
+            display: inline-block;
+            vertical-align: middle;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -36,7 +89,7 @@
 
         <section id="stats">
             <h2>Stats of HI/Max</h2>
-            <table border="1">
+            <table>
                 <caption>Yearly real estate sales data</caption>
                 <thead>
                     <tr>
@@ -82,7 +135,7 @@
         <p>&copy; 2024 Hi/Max Real Estate</p>
         <nav>
             <a href="#" aria-label="Follow us on Twitter">
-                <svg role="img" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="12" cy="12" r="10" fill="blue"/>
                 </svg>
             </a>
